feat: switch to cognito auth
