# backend/models/session.go
@@ -1,14 +1,0 @@
-package models
-
-import (
-	"time"
-
-	guuid "github.com/google/uuid"
-)
-
-type Session struct {
-	SessionId guuid.UUID `gorm:"primaryKey" json:"sessionId"`
-	Expires   time.Time  `json:"-"`
-	UserRefer guuid.UUID `json:"-"`
-	CreatedAt int64      `gorm:"autoCreateTime" json:"-" `
-}
